--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "react-template",
+  "name": "noteful",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "date-fns": "^1.30.1",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1"
   },
   "scripts": {
